[package]
name = "hangman"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
random_word = { version = "0.5.2", features = ["en"]}
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
